updated button sizing issue on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1729,7 +1729,7 @@ span {
 
 @media screen and (max-width: 900px) {
     .work-btn {
-        width: 100%;
+        width: 80%;
     }
 }
 
